# e2-tts-mlx

./: README.md  extract_filterbank.py  preprocess.py  pyproject.toml  train_example.py
e2_tts_mlx/: __init__.py  data.py  model.py  trainer.py
