[build-system]
requires = [
    "einops",
    "g2p-en",
    "huggingface_hub",
    "matplotlib",
    "mlx",
    "numpy",
    "pyyaml",
    "setuptools",
    "vocos-mlx"
]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-e2-tts"
version = "0.0.5"
authors = [{name = "Lucas Newman", email = "lucasnewman@me.com"}]
license = {text = "MIT"}
description = "E2-TTS - MLX"
readme = "README.md"
keywords = [
    "artificial intelligence",
    "asr",
    "audio-generation",
    "deep learning",
    "transformers",
    "text-to-speech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = ['setuptools; python_version>="3.9"']

[project.urls]
Homepage = "https://github.com/lucasnewman/e2-tts-mlx"

[tool.setuptools]
packages = ["e2_tts_mlx"]
